--- a/_events/strawman/N19663644.htm
+++ b/_events/strawman/N19663644.htm
@@ -18,6 +18,13 @@ Parent nodes:
 </ul>
 <p>Child nodes:</p>
 <hr noshade="">
+<ol>
+<li>The Robot has been fully commissioned</li>
+<li>All associated safety cases have been accepted</li>
+<li>All conditions documented in this safety case and associated documentation are in place prior to operation</li>
+<li>All workers are SQEP</li>
+</ol>
+<p>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
 </html>
