--- a/_events/strawman/N20346570.htm
+++ b/_events/strawman/N20346570.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Claim: C1.5 - The standards used are equivalent to or better than the nuclear sector standards</title>
+<title>Claim: C1.2.3 - The standards used are equivalent to or better than the nuclear sector standards</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,17 +9,17 @@
 </head>
 <body>
 
-<h2><a name=''></a>Claim C1.5 The standards used are equivalent to or better than the nuclear sector standards</h2>
+<h2><a name=''></a>Claim C1.2.3 The standards used are equivalent to or better than the nuclear sector standards</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Is a subclaim of <font color="#0000FF">Claim</font>: <a href="N45906796.htm">C1 Robot is adequately safe (tolerable and ALARP) to operate in the environment defined by the assumptions and if the prerequisites are met, to provide pond mapping without operator intervention</a></li>
+<li>Is a subclaim of <font color="#00FF00">Argument</font>: <a href="N7736933.htm">A1.2 Robot is adequately safe (tolerable and ALARP) to operate in the environment defined by the assumptions and if the prerequisites are met, to provide pond mapping without operator intervention because...</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N64882904.htm">E1.5.1 Standards traceability matrix</a></li>
-<li>Has support <font color="#A0A0A0">Other</font>: <a href="N10718501.htm">O1.5.2 Assumption</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N64882904.htm">E1.2.3.1 Standards traceability matrix</a></li>
+<li>Has support <font color="#A0A0A0">Other</font>: <a href="N10718501.htm">O1.2.3.2 Assumption</a></li>
 </ul>
 <hr noshade="">
 <p>&nbsp;</p>
