--- a/_events/strawman/N6571293.htm
+++ b/_events/strawman/N6571293.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Argument: A1.4.3.3.4.4.3.1.1.2 - Design and implementation of the Collision Avoidance guard is adequate to prevent collision because...</title>
+<title>Argument: A1.2.2.3.3.4.4.3.1.1.2 - Design and implementation of the Collision Avoidance guard is adequate to prevent collision because...</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,20 +9,20 @@
 </head>
 <body>
 
-<h2><a name=''></a>Argument A1.4.3.3.4.4.3.1.1.2 Design and implementation of the Collision Avoidance guard is adequate to prevent collision because...</h2>
+<h2><a name=''></a>Argument A1.2.2.3.3.4.4.3.1.1.2 Design and implementation of the Collision Avoidance guard is adequate to prevent collision because...</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Is a subclaim of <font color="#0000FF">Claim</font>: <a href="N40284628.htm">C1.4.3.3.4.4.3.1.1 The guard is adequate to prevent collision</a></li>
+<li>Is a subclaim of <font color="#0000FF">Claim</font>: <a href="N40284628.htm">C1.2.2.3.3.4.4.3.1.1 The guard is adequate to prevent collision</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N13659149.htm">C1.4.3.3.4.4.3.1.1.2.3 The level of independence and independent oversight has been determined and achieved</a></li>
-<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N32153458.htm">C1.4.3.3.4.4.3.1.1.2.2 A suitable design and implementation lifecycle has been followed</a></li>
-<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N34640140.htm">C1.4.3.3.4.4.3.1.1.2.4 Probabilistic analyses have show that the guard has a failure rate commensurate with the requirements</a></li>
-<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N37794136.htm">C1.4.3.3.4.4.3.1.1.2.5 The guard is sufficiently diverse, independent and segregated from the (intelligent) control system</a></li>
-<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N40206844.htm">C1.4.3.3.4.4.3.1.1.2.1 functional requirements</a></li>
+<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N13659149.htm">C1.2.2.3.3.4.4.3.1.1.2.3 The level of independence and independent oversight has been determined and achieved</a></li>
+<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N32153458.htm">C1.2.2.3.3.4.4.3.1.1.2.2 A suitable design and implementation lifecycle has been followed</a></li>
+<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N34640140.htm">C1.2.2.3.3.4.4.3.1.1.2.4 Probabilistic analyses have show that the guard has a failure rate commensurate with the requirements</a></li>
+<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N37794136.htm">C1.2.2.3.3.4.4.3.1.1.2.5 The guard is sufficiently diverse, independent and segregated from the (intelligent) control system</a></li>
+<li>Has subclaim <font color="#0000FF">Claim</font>: <a href="N40206844.htm">C1.2.2.3.3.4.4.3.1.1.2.1 functional requirements</a></li>
 </ul>
 <hr noshade="">
 <p>Requirements for the guard have been derived from the system functional and non-functional safety requirements and verified.</p>
@@ -31,7 +31,7 @@ Parent nodes:
 <p>An analysis has shown that a combination of:</p>
 <ul>
 <li>the maximum speed that the robot is capable of moving (this may need to be governed unless it can be shown that it is impossible to exceed the speed),</li>
-<li>the weight of the robot</li>
+<li>the&nbsp;mass of the robot</li>
 <li>the distance between detection and collision</li>
 <li>the maximum drift distance and deceleration once power is cut to the propellers</li>
 </ul>
