--- a/_events/strawman/N11179960.htm
+++ b/_events/strawman/N11179960.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Evidence: E1.4.3.3.4.4.3.1.2.1.1 - Parts count hardware reliability calculation</title>
+<title>Evidence: E1.2.2.3.3.4.4.3.1.2.1.1 - Parts count hardware reliability calculation</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-<h2><a name=''></a>Evidence E1.4.3.3.4.4.3.1.2.1.1 Parts count hardware reliability calculation</h2>
+<h2><a name=''></a>Evidence E1.2.2.3.3.4.4.3.1.2.1.1 Parts count hardware reliability calculation</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N83710352.htm">A1.4.3.3.4.4.3.1.2.1 Analysis indicates that the failure rate is acceptable</a></li>
+<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N83710352.htm">A1.2.2.3.3.4.4.3.1.2.1 Analysis indicates that the control system's failure rate is acceptable</a></li>
 </ul>
 <p>Child nodes:</p>
 <hr noshade="">
