--- a/_events/strawman/N12613422.htm
+++ b/_events/strawman/N12613422.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Argument: A1.4.1.7.3.1 - A mitigation strategy exists for Hazard 1 Avoidance of Collision</title>
+<title>Argument: A1.2.2.1.7.3.1 - A mitigation strategy exists for Hazard 1 Collision</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,20 +9,20 @@
 </head>
 <body>
 
-<h2><a name=''></a>Argument A1.4.1.7.3.1 A mitigation strategy exists for Hazard 1 Avoidance of Collision</h2>
+<h2><a name=''></a>Argument A1.2.2.1.7.3.1 A mitigation strategy exists for Hazard 1 Collision</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Supports <font color="#0000FF">Claim</font>: <a href="N66794552.htm">C1.4.1.7.3 The identified hazards have a tolerable and ALARP mitigation strategy for each and holistically</a></li>
+<li>Supports <font color="#0000FF">Claim</font>: <a href="N66794552.htm">C1.2.2.1.7.3 The identified hazards have a tolerable and ALARP mitigation strategy for each</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N83599968.htm">E1.4.1.2.1 Hazard identification, security and analysis report</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N9983027.htm">E1.4.1.6 Hazard Log</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N83599968.htm">E1.2.2.1.2.1 Hazard identification, security and analysis report</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N9983027.htm">E1.2.2.1.6 Hazard Log</a></li>
 </ul>
 <hr noshade="">
-<p>Avoidance of collision</p>
+<p>Collision</p>
 <ul>
 <li><span>Consequence: damage to the pond lining, resulting in a leak of liquor from up to 5 cm below the surface of the liquor</span></li>
 </ul>
@@ -35,13 +35,13 @@ Parent nodes:
 <div>Protection <span>Barrier</span></div>
 <ul>
 <li>
-<div class="O1"><span>As the occurrence has been reduced to tolerable and ALARP no protection barrier isnecessary, however, as recognised good practice (RGP) and for defence in depththe following provides a protection barrier</span></div>
+<div class="O1"><span>As the occurrence has been reduced to tolerable and ALARP no protection barrier is necessary, however, as recognised good practice (RGP) and for defence in depth the following provides a protection barrier</span></div>
 </li>
 <li>
 <div class="O2"><span>T</span><span>he pond is bunded and can easily contain the maximum volume of liquor that could leak</span></div>
 </li>
 <li>
-<div class="O2"><span>Radiologically and water proof PPE for all workers within 10m of the edge of the pond.</span></div>
+<div class="O2"><span>Radiologically and water proof PPE for all workers within 10 m of the edge of the pond.</span></div>
 </li>
 </ul>
 <div>Mitigation Barrier</div>
@@ -53,10 +53,10 @@ Parent nodes:
 <div><span><span>An operational condition is necessary:</span> The operation shall only be conducted when the pond liquor level is at its highest operation level<span>.</span></span></div>
 </blockquote>
 <ul>
-<li><span><span>It is estimated that the</span> <span>maxquantity</span> <span>ofliquor will not exceed &lt;x&gt;</span> <span>L and it&nbsp;</span>will not exceed &lt;x&gt; mSv<span>.</span></span></li>
+<li><span><span>It is estimated that the</span> <span>max quantity</span> <span>of liquor</span> <span>will not exceed &lt;x&gt;</span> <span>L and it&nbsp;</span>will not exceed &lt;x&gt; mSv<span>.</span></span></li>
 <li><span><span><span>The pond liquor level will be immediately drained to 5 cm below its highest operational level. This retains enough head of liquor to prevent any radiological leak or the consequences of a ‘dry’ pond</span></span></span></li>
 <li><span><span><span><span>A method has been established to repair the pond that is tolerable and ALARP.</span></span></span></span></li>
-<li><span><span><span><span><span>A method has been established for remediation of the contaminated</span> liquid and the bund which <span>istolerable and</span> <span>ALARP. The liquor will be returned to the pond</span></span></span></span></span></li>
+<li><span><span><span><span><span>A method has been established for remediation of the contaminated</span> liquid and the bund which <span>is tolerable</span> <span>and</span> <span>ALARP. The liquor will be returned to the pond</span></span></span></span></span></li>
 <li><span><span><span><span><span><span>It</span> <span>can and</span> <span>will</span> be carried out by a suitably qualified and experienced person (SQEP) with appropriate PPE and <span>suitable</span> <span>tools.</span></span></span></span></span></span></li>
 <li><span><span><span><span><span><span><span><span><span><span><span><span><span>The</span> <span>tools can</span> <span>and will&nbsp;be decontaminated following</span> <span>use</span></span></span></span></span></span></span></span></span></span></span></span></span></li>
 </ul>
