--- a/_events/strawman/N15140134.htm
+++ b/_events/strawman/N15140134.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Argument: A1.4.3.3.4.3.1 - The efficacy of the the safe operating environment is acheived by the following:</title>
+<title>Argument: A1.2.2.3.3.4.3.1 - The efficacy of the the safe operating environment is achieved by the following:</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,22 +9,22 @@
 </head>
 <body>
 
-<h2><a name=''></a>Argument A1.4.3.3.4.3.1 The efficacy of the the safe operating environment is acheived by the following:</h2>
+<h2><a name=''></a>Argument A1.2.2.3.3.4.3.1 The efficacy of the the safe operating environment is achieved by the following:</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Supports <font color="#0000FF">Claim</font>: <a href="N83924112.htm">C1.4.3.3.4.3 The Safe Operating Envelope will be effective once implemented</a></li>
+<li>Supports <font color="#0000FF">Claim</font>: <a href="N83924112.htm">C1.2.2.3.3.4.3 The Safe Operating Envelope will be effective once implemented</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N43400240.htm">E1.4.3.3.4.3.1.3 Training logs</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N47280304.htm">E1.4.3.3.4.3.1.2 Readiness review report</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N60061312.htm">E1.4.3.3.4.1.1.2 Task analysis report</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N90675424.htm">E1.4.3.3.4.3.1.1 Maintenance schedule</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N43400240.htm">E1.2.2.3.3.4.3.1.3 Training logs</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N47280304.htm">E1.2.2.3.3.4.3.1.2 Readiness review report</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N60061312.htm">E1.2.2.3.3.4.1.2.1 Task analysis report</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N90675424.htm">E1.2.2.3.3.4.3.1.1 Maintenance schedule</a></li>
 </ul>
 <hr noshade="">
-<p>Training. The task analysis has identified the necessary training.</p>
+<p>Training. The task analysis has identified the necessary training and the training has been completed.</p>
 <p>Equipment is appropriately commissioned, managed and maintained.</p>
 <p>Readiness Review&nbsp;(gives confidence that all activities required for implementation of the Safety Case have been adequately covered).</p>
 </body>
