--- a/_events/strawman/N25684524.htm
+++ b/_events/strawman/N25684524.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Argument: A1.4.3.3.4.4.3.2.1.1.1.1.3 - A process which is commensurate with IEC 61508 based on the claim made on the SIF's SSCs has been followed and independently reviewed</title>
+<title>Argument: A1.2.2.3.3.4.4.3.2.1.1.1.1.3 - A process which is commensurate with IEC 61508 based on the claim made on the SIF's SSCs has been followed and independently reviewed</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,21 +9,21 @@
 </head>
 <body>
 
-<h2><a name=''></a>Argument A1.4.3.3.4.4.3.2.1.1.1.1.3 A process which is commensurate with IEC 61508 based on the claim made on the SIF's SSCs has been followed and independently reviewed</h2>
+<h2><a name=''></a>Argument A1.2.2.3.3.4.4.3.2.1.1.1.1.3 A process which is commensurate with IEC 61508 based on the claim made on the SIF's SSCs has been followed and independently reviewed</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Supports <font color="#0000FF">Claim</font>: <a href="N21970314.htm">C1.4.3.3.4.4.3.2.1.1.1.1 The software responsible for decision making for this SIF is adequate (symbolic AI)</a></li>
-<li>Supports <font color="#0000FF">Claim</font>: <a href="N42432232.htm">C1.4.3.3.4.4.3.2.1.1.1.2 The (Intelligent) Collision Sensor software and hardware have been developed according to traditional software and hardware development techniques</a></li>
-<li>Supports <font color="#0000FF">Claim</font>: <a href="N67129160.htm">C1.4.3.3.4.4.3.2.1.1.1.3 The conventional control algorithm software and hardware have been developed according to traditional software and hardware development techniques</a></li>
+<li>Supports <font color="#0000FF">Claim</font>: <a href="N21970314.htm">C1.2.2.3.3.4.4.3.2.1.1.1.1 The software responsible for decision making for this SIF is adequate (symbolic AI)</a></li>
+<li>Supports <font color="#0000FF">Claim</font>: <a href="N42432232.htm">C1.2.2.3.3.4.4.3.2.1.1.1.2 The (Complex) Collision Sensor software and hardware have been developed according to traditional software and hardware development techniques</a></li>
+<li>Supports <font color="#0000FF">Claim</font>: <a href="N67129160.htm">C1.2.2.3.3.4.4.3.2.1.1.1.3 The conventional control algorithm software and hardware have been developed according to traditional software and hardware development techniques</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N4004824.htm">E1.4.3.3.4.4.3.2.1.1.1.1.3.2 Independent review of processes, procedures and evidence</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N80511376.htm">E1.4.3.3.4.4.3.2.1.1.1.1.3.1 Process to standards traceability matrix</a></li>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N88725784.htm">E1.4.3.3.4.4.3.2.1.1.1.1.2.4.1 Design Justification Report (DJR)</a></li>
-<li>Has support <font color="#A0A0A0">Other</font>: <a href="N4081392.htm">O1.4.3.3.4.4.3.2.1.1.1.1.3.3 Assumption</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N4004824.htm">E1.2.2.3.3.4.4.3.2.1.1.1.1.3.2 Independent review of processes, procedures and evidence</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N80511376.htm">E1.2.2.3.3.4.4.3.2.1.1.1.1.3.1 Process to standards traceability matrix</a></li>
+<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N88725784.htm">E1.2.2.3.3.4.4.3.2.1.1.1.1.2.4.1 Design Justification Report (DJR)</a></li>
+<li>Has support <font color="#A0A0A0">Other</font>: <a href="N4081392.htm">O1.2.2.3.3.4.4.3.2.1.1.1.1.3.3 Assumption</a></li>
 </ul>
 <hr noshade="">
 <p>&nbsp;</p>
