--- a/_events/strawman/N33409678.htm
+++ b/_events/strawman/N33409678.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Claim: C1.2.2 - The the use of robotics with AI is justified</title>
+<title>Claim: C1.2.1.2 - The the use of robotics with AI is justified</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-<h2><a name=''></a>Claim C1.2.2 The the use of robotics with AI is justified</h2>
+<h2><a name=''></a>Claim C1.2.1.2 The the use of robotics with AI is justified</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Is a subclaim of <font color="#0000FF">Claim</font>: <a href="N74757024.htm">C1.2 The justification for the operations and the option selection (including those operations associated with the use of Robotics systems)in the specified application are justified, the option(s) selected (including those associated with the use of Robotics systems) are the most reasonably practicable options for the application</a></li>
+<li>Is a subclaim of <font color="#0000FF">Claim</font>: <a href="N74757024.htm">C1.2.1 The justification for the operations and the option selection (including those operations associated with the use of Robotics systems) in the specified application are justified, the option(s) selected (including those associated with the use of Robotics systems) are the most reasonably practicable options for the application</a></li>
 </ul>
 <p>Child nodes:</p>
 <ul>
-<li>Has evidence <font color="#FF00FF">Evidence</font>: <a href="N87628288.htm">E1.2.1.1 Optioneering study report</a></li>
+<li>Has support <font color="#00FF00">Argument</font>: <a href="N86819968.htm">A1.2.1.2.1 The use of AI is justified</a></li>
 </ul>
 <hr noshade="">
 <p>&nbsp;</p>
