--- a/_events/strawman/N5773568.htm
+++ b/_events/strawman/N5773568.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Other: O1.4.1.2.1.1 - Summary of hazards</title>
+<title>Other: O1.2.2.1.2.1.1 - Summary of hazards</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-<h2><a name=''></a>Other O1.4.1.2.1.1 Summary of hazards</h2>
+<h2><a name=''></a>Other O1.2.2.1.2.1.1 Summary of hazards</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Supports <font color="#FF00FF">Evidence</font>: <a href="N83599968.htm">E1.4.1.2.1 Hazard identification, security and analysis report</a></li>
+<li>Supports <font color="#FF00FF">Evidence</font>: <a href="N83599968.htm">E1.2.2.1.2.1 Hazard identification, security and analysis report</a></li>
 </ul>
 <p>Child nodes:</p>
 <hr noshade="">
@@ -22,7 +22,7 @@ Parent nodes:
 <ol>
 <li>Collision (causing damage to pond or pond contents)</li>
 <li>Splash from propellers</li>
-<li>Unretrivable due to complete robot system failure</li>
+<li><span style="color: black; font-family: Verdana; font-size: 10pt; language: en-GB; mso-ascii-font-family: Verdana; mso-fareast-font-family: +mn-ea; mso-bidi-font-family: +mn-cs; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; mso-font-kerning: 12.0pt; mso-style-textfill-type: solid; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%;"><span style="color: black; font-family: Verdana; font-size: 10pt; language: en-GB; mso-ascii-font-family: Verdana; mso-fareast-font-family: +mn-ea; mso-bidi-font-family: +mn-cs; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; mso-font-kerning: 12.0pt; mso-style-textfill-type: solid; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%;">Irretrievable</span></span> due to complete robot system failure</li>
 <li>Explosion due to H<sub>2</sub> evolution at the surface of the pond</li>
 </ol>
 </body>
