--- a/_events/strawman/N7689542.htm
+++ b/_events/strawman/N7689542.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Evidence: E1.4.3.3.4.1.1.3 - Human factors substantiation</title>
+<title>Evidence: E1.2.2.3.3.4.1.2.2 - Human factors substantiation</title>
 <link rel="stylesheet" href="main.css" type="text/css">
 <script type="text/javascript" src="node.js"></script>
 <META http-equiv=Content-Type content="text/html;charset=utf-8">
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<h2><a name=''></a>Evidence E1.4.3.3.4.1.1.3 Human factors substantiation</h2>
+<h2><a name=''></a>Evidence E1.2.2.3.3.4.1.2.2 Human factors substantiation</h2>
 <a href="RAIN Robot operation SC Strawman.htm">[Back to main map]</a>
 <hr noshade="">
 Parent nodes:
 <ul>
-<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N12512767.htm">A1.4.3.3.4.1.1 The Safe Operating Envelope is provided by compliance with Conditions for Acceptance (CFA) for the pond and compliance with procedural and equipment designations</a></li>
-<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N83710352.htm">A1.4.3.3.4.4.3.1.2.1 Analysis indicates that the failure rate is acceptable</a></li>
+<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N12512767.htm">A1.2.2.3.3.4.1.2 The Safe Operating Envelope is provided by compliance with Conditions for Acceptance (CFA) for the pond and compliance with procedural and equipment designations</a></li>
+<li>Is evidence for <font color="#00FF00">Argument</font>: <a href="N83710352.htm">A1.2.2.3.3.4.4.3.1.2.1 Analysis indicates that the control system's failure rate is acceptable</a></li>
 </ul>
 <p>Child nodes:</p>
 <hr noshade="">
